--- a/ReservationApp/ReservationApp/appsettings.json
+++ b/ReservationApp/ReservationApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnStr": "Data Source=DESKTOP-61AR7HS;Database=piwo;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+    "ConnStr": "Data Source=DESKTOP-61AR7HS;Database=ReservationAppDB;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
